tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr19005.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/pr19005.c" (c, x86_64-unknown-linux-gnu)
global v : s32i = 0 [external, default, align 4, dso_local]
global s : s32i = 0 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn bar(%arg1: s32i, %arg2: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i, %arg2: s32i):
        %54 = alloca s32i, "a", align 4
        %55 = alloca s32i, "b", align 4
        %56 = alloca u8i, "x", align 1
        store %arg1, %54
        store %arg2, %55
        %57 = get_global @v : s32i*
        %58 = load %57 : s32i, align 4
        %59 = cast(integral) %58 : u8i
        store %59, %56, align 1
        scope {
            %64 = get_global @s : s32i*
            %65 = load %64 : s32i, align 4
            %66 = cast(int_to_bool) %65 : bool
            %67 = not %66 : bool
            if %67 {
                scope {
                    %83 = load %54 : s32i, align 4
                    %84 = load %56 : u8i, align 1
                    %85 = cast(integral) %84 : s32i
                    %86 = cmp ne %83, %85 : bool
                    %87 = ternary %86 ? { : bool
                        %97 = const #true : bool
                        yield %97
                    } : {
                        %89 = load %55 : s32i, align 4
                        %90 = load %56 : u8i, align 1
                        %91 = cast(integral) %90 : s32i
                        %92 = const 1 : s32i
                        %93 = add %91, %92 : s32i [nsw]
                        %94 = cast(integral) %93 : u8i
                        %95 = cast(integral) %94 : s32i
                        %96 = cmp ne %89, %95 : bool
                        yield %96
                    }
                    if %87 {
                        %88 = get_global @abort : (() -> void)*
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                yield
            } else {
                scope {
                    %68 = load %54 : s32i, align 4
                    %69 = load %56 : u8i, align 1
                    %70 = cast(integral) %69 : s32i
                    %71 = const 1 : s32i
                    %72 = add %70, %71 : s32i [nsw]
                    %73 = cast(integral) %72 : u8i
                    %74 = cast(integral) %73 : s32i
                    %75 = cmp ne %68, %74 : bool
                    %76 = ternary %75 ? { : bool
                        %82 = const #true : bool
                        yield %82
                    } : {
                        %78 = load %55 : s32i, align 4
                        %79 = load %56 : u8i, align 1
                        %80 = cast(integral) %79 : s32i
                        %81 = cmp ne %78, %80 : bool
                        yield %81
                    }
                    if %76 {
                        %77 = get_global @abort : (() -> void)*
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %60 = const 1 : s32i
        %61 = get_global @s : s32i*
        %62 = load %61 : s32i, align 4
        %63 = xor %62, %60 : s32i
        store %63, %61, align 4
        return
}
fn foo(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %16 = alloca s32i, "x", align 4
        %17 = alloca s32i, "__retval", align 4
        %18 = alloca u8i, "a", align 1
        %19 = alloca u8i, "b", align 1
        store %arg0, %16
        %20 = load %16 : s32i, align 4
        %21 = cast(integral) %20 : u8i
        store %21, %18, align 1
        %22 = load %16 : s32i, align 4
        %23 = const 1 : s32i
        %24 = add %22, %23 : s32i [nsw]
        %25 = cast(integral) %24 : u8i
        store %25, %19, align 1
        %26 = load %18 : u8i, align 1
        %27 = cast(integral) %26 : s32i
        %28 = load %19 : u8i, align 1
        %29 = cast(integral) %28 : s32i
        call @bar(%27, %29) [all]
        %30 = load %19 : u8i, align 1
        %31 = cast(integral) %30 : s32i
        %32 = load %18 : u8i, align 1
        %33 = cast(integral) %32 : s32i
        %34 = xor %33, %31 : s32i
        %35 = cast(integral) %34 : u8i
        store %35, %18, align 1
        %36 = load %18 : u8i, align 1
        %37 = cast(integral) %36 : s32i
        %38 = load %19 : u8i, align 1
        %39 = cast(integral) %38 : s32i
        %40 = xor %39, %37 : s32i
        %41 = cast(integral) %40 : u8i
        store %41, %19, align 1
        %42 = load %19 : u8i, align 1
        %43 = cast(integral) %42 : s32i
        %44 = load %18 : u8i, align 1
        %45 = cast(integral) %44 : s32i
        %46 = xor %45, %43 : s32i
        %47 = cast(integral) %46 : u8i
        store %47, %18, align 1
        %48 = load %18 : u8i, align 1
        %49 = cast(integral) %48 : s32i
        %50 = load %19 : u8i, align 1
        %51 = cast(integral) %50 : s32i
        call @bar(%49, %51) [all]
        %52 = const 0 : s32i
        store %52, %17
        %53 = load %17 : s32i
        return %53
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = const -10 : s32i
        %5 = get_global @v : s32i*
        store %4, %5, align 4
        for cond: {
            %12 = get_global @v : s32i*
            %13 = load %12 : s32i, align 4
            %14 = const 266 : s32i
            %15 = cmp lt %13, %14 : bool
            condition %15
        } step: {
            %6 = get_global @v : s32i*
            %7 = load %6 : s32i, align 4
            %8 = inc %7 : s32i [nsw]
            store %8, %6, align 4
            yield
        } do {
            %9 = get_global @v : s32i*
            %10 = load %9 : s32i, align 4
            %11 = call @foo(%10) : s32i [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
